# NanoLog

./: CMakeLists.txt  README.md  runIntegrationTest.sh  setup.sh
benchmarks/: Benchmark.cc  CMakeLists.txt  run_bench.sh  run_preprocVsCpp17.sh
cmake/Modules/: Flags.cmake
core/: CMakeLists.txt  Common.h  Config.h  Cycles.h  Fence.h  GeneratedCode.h  Initialize.h  Log.cc  Log.h  NanoLog.cc  NanoLog.h  NanoLogCpp17.h  Packer.h  Portability.h  RuntimeLogger.cc  RuntimeLogger.h  TimeTrace.h  Util.h
integrationTest/: CMakeLists.txt  SimpleTestObject.cc  SimpleTestObject.h  main.cc
integrationTest/folder/: Sample.h  main.cc
logDecompressor/: CMakeLists.txt  LogDecompressor.cc
perf/: CMakeLists.txt  Perf.cc  PerfHelper.cc  PerfHelper.h
runtime/: CMakeLists.txt  Config.h  Cycles.cc  Cycles.h  GeneratedCode.h  Log.cc  Log.h  RuntimeLogger.cc  TimeTrace.cc  TimeTrace.h  Util.cc  Util.h
